# bbox

./: .coveragerc  .gitignore  .travis.yml  LICENSE  Pipfile  README.md  maidfile.md  pylint.rc  pyproject.toml  setup.py
bbox/: __init__.py  bbox2d.py  bbox2d_list.py  bbox3d.py  boundingbox.py  boundingboxlist.py  box_modes.py  geometry.py  metrics.py  nms.py  utils.py
docs/: .buildinfo  bbox.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/bbox/: bbox2d.html  bbox2d_list.html  bbox3d.html  box_modes.html  geometry.html  metrics.html  utils.html
docs/_sources/: modules.rst.txt
docs/_static/: documentation_options.js
docs/source/: conf.py  index.rst
docsrc/source/: bbox.rst  conf.py
tests/: plot_cubes.py  test_bbox2d.py  test_bbox2d_list.py  test_bbox3d.py  test_boundingbox.py  test_boundingboxlist.py  test_geometry.py  test_metrics.py  test_utils.py
