[tool.poetry]
name = "bbox"
version = "0.9.2"
description = "Python library for 2D/3D bounding boxes"
authors = ["Varun Agrawal <varagrawal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.2"
pyquaternion = "^0.9.5"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pendulum = "^2.1.0"
codecov = "^2.0.22"
coverage = "^5.0.4"
pytest-cov = "^2.8.1"
pytest = "^5.4.1"
matplotlib = "^3.2.1"
pillow = "^7.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
